[package]
name = "kcpclient"
version = "0.1.1"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/kcp_client"
documentation = "https://docs.rs/kcpclient"
description = "kcp client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
log="0.4"
chrono="0.4"